# whisper_api

./: .gitignore  Cargo.toml  PROMETHEUS_IMPROVEMENTS.md  README.md  generate_docs.ps1  prompt.txt  prompt_summary.txt  rust_preprompt.txt  whisper_api.conf  whisper_api.conf.backup  whisperx.md  whisperx.sh
documentation/: METRICS_STATSD.md  METRICS_SYSTEM_DOCUMENTATION.md  README_metrics.md  README_metrics_FR.md  test-metrics.md
src/: config.rs  config_loader.rs  config_validator.rs  error.rs  file_utils.rs  handlers.rs  lib.rs  main.rs  metrics.rs  models.rs  queue_manager.rs
src/handlers/: authentication.rs  form.rs  mod.rs  routes.rs
src/metrics/: README_metrics.md  README_metrics_FR.md  error.rs  metrics.rs  mod.rs  null.rs  prometheus.rs  statsd.rs  test_statsd.rs
src/metrics/tests/: README.md  README_TESTS.md  benchmarks.rs  debug_env.sh  integration_tests.rs  run_metrics_tests.sh  test_metrics.bat  test_metrics.ps1  test_prometheus_metrics.sh  test_runner.sh  test_statsd.rs  test_statsd_metrics.sh
