[package]
name = "whisper_api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
actix-web = "4.10.2"
actix-multipart = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.19.1"
futures ="0.3"
uuid = { version = "1.3.0", features = ["v4"] }