[package]
name = "whisper_api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
actix-web = "4.11.0"
actix-multipart = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
uuid = { version = "1.17.0", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2.0.12"
toml = "0.8.23"
num_cpus = "1.17.0"
lazy_static = "1.5.0"
chrono = "0.4"
